fixed spacing

--- a/client/src/styles/Hamburger.scss
+++ b/client/src/styles/Hamburger.scss
@@ -41,6 +41,7 @@
         background-color: $orange;
     }
     .materials {
+        margin-top: 1em;
         border-bottom: 4px solid #79cfca;
         padding: 10px;
         .materials-title {
